--- a/.examples/docker-compose/insecure/mariadb/fpm/rengacloud/themes/rengacloud/core/css/server.css
+++ b/.examples/docker-compose/insecure/mariadb/fpm/rengacloud/themes/rengacloud/core/css/server.css
@@ -25,6 +25,26 @@
 	background-color: #0082c9;
 }
 
+body {
+	background-color: #ffffff;
+	font-weight: normal;
+	/* bring the default font size up to 14px */
+	font-size: .875em;
+	line-height: 1.6em;
+	font-family: -apple-system, BlinkMacSystemFont, 'Nunito', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	color: #000;
+	text-align: center;
+	background-color: #0082c9;
+	background-image: url('../img/background.png?v=2');
+	background-image: url('../img/background.png?v=2'), linear-gradient(40deg, #0082c9 0%, rgba(28,175,255,1) 100%);
+	background-position: 50% 50%;
+	background-repeat: repeat;
+	background-size: 275px, contain;
+	background-attachment: fixed; /* fix background gradient */
+	min-height: 100%; /* fix sticky footer */
+	height: auto;
+}
+
 /* log in screen background color */
 /* gradient of the header color and a brighter shade */
 /* can also be a flat color or an image */
@@ -52,7 +72,7 @@ input[type="submit"].primary:active,
 input[type="button"].primary:active,
 button.primary:active,
 .button.primary:active {
-	border-color: #494C51;
+	border-color: #FFFFFF;
 	background-color: #32363C;
 }
 .primary:hover,
@@ -88,9 +108,8 @@ a.primary:not(:disabled):focus {
 
 input[type='text'],
 input[type='tel'],
-input[type='password'],
 input[type='email'] {
-	width: 360px;
+	width: 366px;
 	background: #fff;
 	color: #555;
 	cursor: text;
@@ -100,6 +119,20 @@ input[type='email'] {
 	box-sizing: content-box;
 	border: none;
 	font-weight: normal;
+}
+
+input[type='submit']:focus {
+	border: 2px solid #fff !important;
+	padding: 8px;
+}
+
+input[type='password'].password-with-toggle, input[type='text'].password-with-toggle {
+	width: 336px;
+	padding-right: 40px;
+}
+
+input, textarea, select, button, div[contenteditable=true] {
+	font-family: -apple-system, BlinkMacSystemFont, 'Nunito', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 /* use logos from theme */
